# prism-notify

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  prism-notify.service
.github/workflows/: ci.yml
resources/: default-config.kdl
src/: config.rs  dbus.rs  main.rs  notification.rs  ui.rs
